--- a/CARTELERA/CARTELERA_1/index.html
+++ b/CARTELERA/CARTELERA_1/index.html
@@ -24,9 +24,10 @@
       <div class="v9_23"></div>
       <div class="v9_28"></div>
       <div class="v9_24"></div>
-      <span class="v9_27">Seleccioná la película para ver días y horarios</span
-      ><span class="v9_97">Cartelera</span><span class="v9_98">Complejos</span
-      ><span class="v9_99">Valores</span>
+      <span class="v9_27">Seleccioná la película para ver días y horarios</span>
+      <span class="v9_97"><button><a href="/CARTELERA/CARTELERA_1/index.html">Cartelera</a></button></span>
+      <span class="v9_98"><button><a href="/COMPLEJOS/index.html">Complejos</a></button></span>
+      <span class="v9_99"><button><a href="/VALORES/index.html">Valores</a></button></span>
     </div>
   </body>
 </html>
