--- a/COMPLEJOS/index.html
+++ b/COMPLEJOS/index.html
@@ -14,8 +14,9 @@
       <div class="v9_80"></div>
       <div class="v9_81"></div>
       <div class="v9_82"></div>
-      <span class="v9_83">Cartelera</span><span class="v9_84">Complejos</span
-      ><span class="v9_85">Valores</span>
+      <span class="v9_83"><button><a href="/CARTELERA/CARTELERA_1/index.html">Cartelera</a></button></span>
+      <span class="v9_84"><button><a href="COMPLEJOS/index.html">Complejos</a></button></span>    
+      <span class="v9_85"><button><a href="/VALORES/index.html">Valores</a></button></span>
       <div class="v9_87"></div>
       <span class="v9_88">LOGOTIPOAUTOCINE </span>
       <div class="v9_89"></div>
