--- a/VALORES/index.html
+++ b/VALORES/index.html
@@ -14,8 +14,9 @@
       <div class="v9_175"></div>
       <div class="v9_176"></div>
       <div class="v9_177"></div>
-      <span class="v9_178">Cartelera</span><span class="v9_179">Complejos</span
-      ><span class="v9_180">Valores</span>
+      <span class="v9_178"><button><a href="/CARTELERA/CARTELERA_1/index.html">Cartelera</a></button></span>
+      <span class="v9_179"><button><a href="COMPLEJOS/index.html">Complejos</a></button></span>
+      <span class="v9_180"><button><a href="/VALORES/index.html">Valores</a></button></span>
       <div class="v9_181"></div>
       <span class="v9_182">LOGOTIPOAUTOCINE </span>
       <div class="v9_183"></div>
