--- a/CARTELERA/CARTELERA_1/index.html
+++ b/CARTELERA/CARTELERA_1/index.html
@@ -26,7 +26,7 @@
       <div class="v9_24"></div>
       <span class="v9_27">Seleccioná la película para ver días y horarios</span>
       <span class="v9_97"><button><a href="/CARTELERA/CARTELERA_1/index.html">Cartelera</a></button></span>
-      <span class="v9_98"><button><a href="/COMPLEJOS/index.html">Complejos</a></button></span>
+      <span class="v9_98"><button><a href="/COMPLEJOS/index.html/">Complejos</a></button></span>
       <span class="v9_99"><button><a href="/VALORES/index.html">Valores</a></button></span>
     </div>
   </body>
